# my_administrator

./: .dockerignore  .env_nginx  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_opensuse  Makefile  README.md  aiogram_dialog  alembic.ini  docker-compose.yml  docker-compose_nginx.yml  docker-compose_opensuse.yml  dockerfile  pg_hba.conf  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 037f713be121_initial_migration.py  09f2d97161a2_initial_migration.py  0a9911fb0d3a_initial_migration.py  0cbeb55bf8f3_initial_migration.py  15a1817fbf3d_initial_migration.py  16de2b8ca5ad_initial_migration.py  1890126cb31f_initial_migration.py  1e6074ebc19b_initial_migration.py  20716cd8712b_initial_migration.py  24755b808b80_initial_migration.py  42f8cccffce6_initial_migration.py  45a217f58e16_initial_migration.py  48bc0ffff4b8_initial_migration.py  493738470241_initial_migration.py  4a53c34cba10_initial_migration.py  4cc96cf91f97_initial_migration.py  5f5f981f8a46_initial_migration.py  6503493d77f7_initial_migration.py  6612fc4ffeb5_initial_migration.py  69801d6e6583_initial_migration.py  6eee6270b641_initial_migration.py  72bd7d8d4fe9_initial_migration.py  7a4cd293812c_initial_migration.py  80d894a817dd_initial_migration.py  89ca48db7662_initial_migration.py  8a8f4b7d29b1_initial_migration.py  8b2915b95b7a_initial_migration.py  952f1ec0e70b_initial_migration.py  af02232b8fe1_initial_migration.py  b51162f91c52_initial_migration.py  bc7e9471091f_initial_migration.py  c648252f5389_initial_migration.py  da537d41666c_initial_migration.py  dac5d0f1594d_.py  e7909d9a6649_initial_migration.py  eb6d36306606_initial_migration.py  ef63508943d8_initial_migration.py  f77088b1d275_initial_migration.py
app/: config.py  data.py  logger_config.py  main.py  scheduler_tasks.py
app/database/: crud.py  database.py  main.py  models.py  schemas.py
app/filters/: admin.py  default.py  form_menu.py  mfc_filters.py  mo_filters.py
app/handlers/: additional.py  default.py  dev.py  main.py  messages.py  states.py
app/keyboards/: admin.py  default.py  mfc_part.py  mo_part.py
app/middlewares/: logging_errors.py  logging_mw.py  main.py  (+1 more)
bot/: config.py  main.py
tests/: christine_test.py  config.py  conftest.py  insert_test_data.py  mocked_aiogram.py  pytest.ini  test_mfc_commands.py  test_mfc_handlers.py  test_module.py  test_notebook.ipynb  test_start_cmd.py  utils.py
(+72 files in other folders)
