[tool.poetry]
name = "my-administrator"
version = "0.1.0"
description = ""
authors = ["timosii <tsimashev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"
loguru = "^0.7.2"
diagrams = "^0.23.4"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
alembic = "^1.13.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pydantic = "^2.7.1"
notifiers = "^1.3.3"
redis = "^5.0.5"
aiocache = "^0.12.2"
pytz = "^2024.1"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
